Bug 15357 - streams_depot fails to create streams
Summary: streams_depot fails to create streams
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-14 14:32 UTC by Volker Lendecke
Modified: 2023-05-11 07:12 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.18 (1.28 KB, patch)
2023-04-18 07:33 UTC, Volker Lendecke
slow: review+
Details
Patch for 4.17 (1.28 KB, patch)
2023-04-18 07:38 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-04-14 14:32:29 UTC
https://gitlab.com/samba-team/samba/-/blob/master/source3/modules/vfs_streams_depot.c#L693 must look at how->flags instead of how->mode

Have patch, need bugnumber
Comment 1 Samba QA Contact 2023-04-17 18:12:13 UTC
This bug was referenced in samba master:

081e808ab4ac6e187b9791da322eb7173e1e133c
Comment 2 Volker Lendecke 2023-04-18 07:33:07 UTC
Created attachment 17866 [details]
Patch for 4.18
Comment 3 Volker Lendecke 2023-04-18 07:38:45 UTC
Created attachment 17867 [details]
Patch for 4.17
Comment 4 Ralph Böhme 2023-04-18 11:43:00 UTC
Reassigning to Jule for inclusion in 4.17 and 4.18.
Comment 5 Jule Anger 2023-04-18 15:19:20 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 6 Samba QA Contact 2023-04-18 16:23:04 UTC
This bug was referenced in samba v4-17-test:

8c9945e24b21c183150c999f227863df76aabb8e
Comment 7 Samba QA Contact 2023-04-18 19:07:11 UTC
This bug was referenced in samba v4-18-test:

e1508b922032b08602544a363b9cb3ab690591d8
Comment 8 Jule Anger 2023-04-19 10:05:11 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-04-19 10:24:28 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.2):

e1508b922032b08602544a363b9cb3ab690591d8
Comment 10 Samba QA Contact 2023-05-11 07:12:00 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

8c9945e24b21c183150c999f227863df76aabb8e